tests/trybuild/compile_fail/with_settings/bump_scope/borrow_mut/guaranteed_allocated_decrease.stderr
error[E0080]: evaluation panicked: can't change guaranteed-allocated property when mutably borrowing with new settings
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED == S::GUARANTEED_ALLOCATED,
  | |                 "can't change guaranteed-allocated property when mutably borrowing with new settings"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings<1, true, true>>::ensure_satisfies_settings_for_borrow_mut::<bump_scope::settings::BumpSettings>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             assert!(NewS::CLAIMABLE == S::CLAIMABLE, "can't change claimability");
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings<1, true, true>>::ensure_satisfies_settings_for_borrow_mut::<BumpSettings>`
 --> src/bump_scope.rs
  |
  |         self.raw.ensure_satisfies_settings_for_borrow_mut::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
